--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">FirstProject</string>
     <string name="action_settings">Settings</string>
     <string name="hello_seneca">Hello Seneca, First Activity</string>
+	<string name="click_me">Click me!</string>
 
 </resources>
