--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="hello_seneca">Hello Seneca, First Activity</string>
 	<string name="click_me">Click me!</string>
-
+	<color name="red">#ff0000</color>
+	
 </resources>
