--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="hello_seneca">Hello Seneca, First Activity</string>
 	<string name="click_me">Click me!</string>
 	<color name="red">#ff0000</color>
+	<color name="blue">#0000ff</color>
 	
 </resources>
